DevOps/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cryptochat-ingress-front
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sakurablog.ru
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3030
      - path: /signup
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3030
      - path: /verify
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3030
      - path: /api/post-service/v1/
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 9000
      - path: /api/comms-service/v1/
        pathType: Prefix
        backend:
          service:
            name: comment-service
            port:
              number: 9090
      - path: /api/chat-service/v1/chat
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
  - host: cryptochat.site
    http:
      paths:
      - path: "/cryptochat/auth/"
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: "/cryptochat/comments/"
        pathType: Prefix
        backend:
          service:
            name: comments
            port:
              number: 3002
      - path: "/cryptochat/publish/"
        pathType: Prefix
        backend:
          service:
            name: publish
            port:
              number: 3003
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 3000
